--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,19 @@
-<!doctype html>
 <!DOCTYPE html>
 <html>
 <head>
-	<title>First Django</title>
+    <title>First Django</title>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.23/c3.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" type="text/css" href="../static/css/custom.css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-	{% include 'navbar.html' %}
+{% include 'navbar.html' %}
 
-	{% block stuff %}
-	{% endblock %}
-	
+{% block stuff %}
+{% endblock %}
+
 </body>
 </html>
