--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,17 @@
-<nav>
-	<ul>
-		<li>One</li>
-		<li>Two</li>
-		<li>Three</li>
-	</ul>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <div class="navbar-header">
+            <a href="" class="navbar-brand">TST</a>
+        </div>
+
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="active" ><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="/student_list">Students</a></li>
+            </ul>
+        </div>
+
+    </div>
 </nav>
