added edit pages

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
             <ul class="nav navbar-nav">
                 <li class="active" ><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="/student_list">Students</a></li>
+                <li><a href="/student_list">Student List</a></li>
             </ul>
         </div>
 
