--- a/templates/students/student_details.html
+++ b/templates/students/student_details.html
@@ -6,4 +6,5 @@
         <li>{{kid.email}}</li>
         <li>{{kid.contact_name}}</li>
     </ul>
+<button>Edit Profile</button>
 {% endblock stuff %}
