--- a/templates/students/student_details.html
+++ b/templates/students/student_details.html
@@ -6,5 +6,5 @@
         <li>{{kid.email}}</li>
         <li>{{kid.contact_name}}</li>
     </ul>
-<button>Edit Profile</button>
+<input type="button" onclick="location.href='/student_edit/{{kid.id}}'" value="Edit Profile" />
 {% endblock stuff %}
