user data update

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block stuff %}
-<form method="POST">{% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Save" name="">
-</form>
+<div class="container">
+    <form method="POST">{% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Save" name="">
+    </form>
+</div>
 {% endblock stuff %}
