--- a/templates/students/student_list.html
+++ b/templates/students/student_list.html
@@ -3,7 +3,7 @@
 {% block stuff %}
 <div class="container">
     <h1>Student List</h1>
-    <!--Bootstrap Table using .table class-->
+    <a href="/student_create" class="btn btn-info" role="button">Create New Student +</a>
     <table class="table">
         <thead>
         <tr>
