--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,17 +1,20 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
-
         <div class="navbar-header">
-            <a href="" class="navbar-brand">TST</a>
+            <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
-
-        <div>
-            <ul class="nav navbar-nav">
-                <li class="active" ><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="/student_list">Student List</a></li>
-            </ul>
-        </div>
-
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Page 1</a></li>
+            <li><a href="/student_list">Student List</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
+            {% else %}
+            <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            {% endif %}
+        </ul>
     </div>
-</nav>
+</nav> 
