--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
             <li><a href="/student_list">Student List</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="/registration"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             {% if user.is_authenticated %}
             <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
             {% else %}
