--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,31 @@
 {% extends 'base.html' %}
 
 {% block stuff %}
-<div class="container">
+<!--<div class="login-form">-->
+    <!--<form method="POST">{% csrf_token %}-->
+        <!--<h2 class="text-center">Log In</h2>-->
+        <!--{{form.as_p}}-->
+        <!--<div class="form-group">-->
+            <!--<button type="submit" class="btn btn-primary btn-block">Log in</button>-->
+        <!--</div>-->
+    <!--</form>-->
+<!--</div>-->
+
+<div class="login-form">
     <form method="POST">{% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Login" name="">
+        <h2 class="text-center">Log in</h2>
+        <!--<div class="form-group">-->
+            {{form.as_p}}
+        <!--</div>-->
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+        </div>
+        <div class="clearfix">
+            <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
+            <a href="#" class="pull-right">Forgot Password?</a>
+        </div>
     </form>
+    <p class="text-center"><a href="#">Create an Account</a></p>
 </div>
+
 {% endblock stuff %}
