--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
             <a href="#" class="pull-right">Forgot Password?</a>
         </div>
     </form>
-    <p class="text-center"><a href="#">Create an Account</a></p>
+    <p class="text-center"><a href="/registration">Create an Account</a></p>
 </div>
 
 {% endblock stuff %}
