static files setup

--- a/templates/club_create.html
+++ b/templates/club_create.html
@@ -2,6 +2,10 @@
 
 {% block stuff %}
 
-
-
+<div class="container">
+    <form method="POST">{% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Save" name="">
+    </form>
+</div>
 {% endblock stuff %}
