--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
+            <li><a href="/team_list">Team List</a></li>
             <li><a href="/student_list">Student List</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
