fixed main Club model

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,6 +3,7 @@
 {% block stuff %}
 <div class="container">
     <form method="POST">{% csrf_token %}
+        {% if user.club %}{%else%}{{form_club.as_p}}{%endif%}
         {{form.as_p}}
         <input type="submit" value="Save" name="">
     </form>
