--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -5,9 +5,9 @@
 <div class="container">
     <form method="POST">{% csrf_token %}
         {% for day in days %}
-        {{day}}
+        {{day.name}}
+            {{form.as_p}}
         {% endfor %}
-        <input type="submit" value="Save" name="">
     </form>
 </div>
 {% endblock stuff %}
