--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,6 +7,8 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="/team_list">Team List</a></li>
             <li><a href="/student_list">Student List</a></li>
+            <li><a href="/timetables/create_timetable_times">Timetable</a></li>
+
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#">{{user.full_name}}</a></li>
