--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -8,6 +8,7 @@
         {{day.name}}
             {{form.as_p}}
         {% endfor %}
+        <input type="submit" value="Save" name="">
     </form>
 </div>
 {% endblock stuff %}
