--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -4,7 +4,10 @@
 
 <div class="container">
     <form method="POST">{% csrf_token %}
+        {% for form in forms%}
+            {{form.prefix}}
             {{form.as_p}}
+        {%endfor%}
         <input type="submit" value="Save" name="">
     </form>
 </div>
