--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -5,10 +5,25 @@
 <div class="container">
     <form method="POST">{% csrf_token %}
         {% for form in forms%}
+        <div class="box">
             {{form.prefix}}
             {{form.as_p}}
+        </div>
         {%endfor%}
         <input type="submit" value="Save" name="">
     </form>
 </div>
+<style>
+    .box {
+  float: left;
+  width: 200px;
+  height: 100px;
+  margin: 1em;
+}
+.after-box {
+  clear: left;
+}
+
+</style>
 {% endblock stuff %}
+
