added js folder structure

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,3 +20,13 @@
         font-size: 15px;
         font-weight: bold;
     }
+
+    .box {
+        float: left;
+        width: 200px;
+        height: 100px;
+        margin: 1em;
+    }
+    .after-box {
+        clear: left;
+    }
