--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -7,12 +7,12 @@
         {% for form in forms%}
         <div class="box" id="day_{{form.prefix}}">
             {{form.prefix}}
+            <p><a href="#" class="day_button" id="add_another_{{form.prefix}}">Add Period</a></p>
             <div id="times_{{form.prefix}}">
-                <div id="fields_{{form.prefix}}">
+                <div id="fields_{{form.prefix}}" style="border-style: solid;border-width: 5px;">
                     {{form.as_p}}
                 </div>
             </div>
-            <p><a href="#" class="day_button" id="add_another_{{form.prefix}}">Add Period</a></p>
         </div>
         {%endfor%}
         <input type="submit" value="Save" name="">
@@ -20,27 +20,9 @@
     </form>
 </div>
 <style>
-    .box {
-  float: left;
-  width: 200px;
-  height: 100px;
-  margin: 1em;
-}
-.after-box {
-  clear: left;
-}
+
 
 </style>
-<script>
-    $(document).ready(function() {
-        fields = 0;
-        $(".day_button").click(function(e) {
-            day = $(this).attr('id')
-            day = day.split("_")
-            day = day[day.length - 1]
-            $("#fields_" + day).clone().appendTo($("<div></div>").attr("id", "fields " + "_day_" + fields++).attr("name", "fields" + "_day_" + fields++).appendTo("#times_" + day));
-        })
-});
-</script>
+
 {% endblock stuff %}
 
