--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../../static/js/main.js"></script>
 
-    <link rel="stylesheet" type="text/css"  href="../static/css/index.css">
+    <link rel="stylesheet" type="text/css"  href="../../static/css/index.css">
 </head>
 <body>
 {% if request.user.is_active %}
@@ -25,6 +26,6 @@
 
 </body>
 <script>
-    
+
 </script>
 </html>
