added js folder structure

--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -9,7 +9,7 @@
             {{form.prefix}}
             <p><a href="#" class="day_button" id="add_another_{{form.prefix}}">Add Period</a></p>
             <div id="times_{{form.prefix}}">
-                <div id="fields_{{form.prefix}}" style="border-style: solid;border-width: 5px;">
+                <div id="fields_{{form.prefix}}_0" name="fields_{{form.prefix}}_0">
                     {{form.as_p}}
                 </div>
             </div>
