--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -7,7 +7,8 @@
         {% for form in forms%}
         <div class="box" id="day_{{form.prefix}}">
             {{form.prefix}}
-            <p><a href="#" class="day_button" id="add_another_{{form.prefix}}">Add Period</a></p>
+            <p><a href="#" class="add_button" id="add_another_{{form.prefix}}">Add Period</a></p>
+            <p><a href="#" class="remove_button" id="remove_{{form.prefix}}">Remove Period</a></p>
             <div id="times_{{form.prefix}}">
                 <div id="fields_{{form.prefix}}_0" name="fields_{{form.prefix}}_0">
                     {{form.as_p}}
