add and remove improved

--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -10,7 +10,7 @@
             <p><a href="#" class="add_button" id="add_another_{{form.prefix}}">Add Period</a></p>
             <p><a href="#" class="remove_button" id="remove_{{form.prefix}}">Remove Period</a></p>
             <div id="times_{{form.prefix}}">
-                <div id="fields_{{form.prefix}}_0" name="fields_{{form.prefix}}_0">
+                <div id="fields_{{form.prefix}}_0" name="fields_{{form.prefix}}_0" class="times_field">
                     {{form.as_p}}
                 </div>
             </div>
