--- a/templates/timetables/create_timetable_times.html
+++ b/templates/timetables/create_timetable_times.html
@@ -12,6 +12,7 @@
             <div id="times_{{form.prefix}}">
                 <div id="fields_{{form.prefix}}_0" name="fields_{{form.prefix}}_0" class="times_field">
                     {{form.as_p}}
+                    <!--<input type="text" name="timepicker" class="timepicker"/>-->
                 </div>
             </div>
         </div>
