--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Sports Club</title>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.23/c3.css" rel="stylesheet">
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.23/c3.css" rel="stylesheet">-->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <!--<link rel="stylesheet" type="text/css" href="../static/css/custom.css">-->
 
@@ -13,6 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="../../static/js/main.js"></script>
+
+    <script type="text/javascript" src="../../static/js/timepicker/jquery.timepicker.js"></script>
+    <link rel="stylesheet" href="../../static/css/timepicker/jquery.timepicker.css">
 
     <link rel="stylesheet" type="text/css"  href="../../static/css/index.css">
 </head>
