--- a/static/css/index.css
+++ b/static/css/index.css
@@ -32,10 +32,10 @@
     }
 
     .time_picker {
-      border-radius:36px;
+     // border-radius:36px;
     }
     .period {
         border: 1px solid #ccc;
-        border-radius: 16px;
+      //  border-radius: 16px;
         padding: 10px;
     }
