--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sports Club</title>
+    <title>{{request.user.club}}</title>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.23/c3.css" rel="stylesheet">-->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
